# Multi-agent-trading

./: .gitignore  README.md  app.py  index.html  main.py  news_agent.py  pyproject.toml  risk_agent.py  technical_agent.py
news-agent/: Dockerfile  news-agent.py
risk-agent/: Dockerfile  risk-agent.py
technical-agent/: Dockerfile  technical-agent.py
web-interface/: Dockerfile  app.py
web-interface/templates/: index.html
